fix: google button dark mode

--- a/styles/dark.scss
+++ b/styles/dark.scss
@@ -1027,16 +1027,18 @@
           opacity: 0.75;
         }
       }
-
+    }
+    
+    .Login_form__googleBtnWrapper__oxvZc {
       .Login_form__btnGoogle__Fz5Sh {
         background-color: #333;
         color: #d4d8db;
         border-color: #333;
-
+  
         &:hover {
           opacity: 0.75;
         }
-
+  
         .Login_socialLoginIcon__IrX_N {
           background-color: rgba(2, 2, 2, 0.3);
         }
